1998-10-06  Chris Lahey  <clahey@umich.edu>

	* client/client.h, client/client.c: Added text_insert
	functionality.

1998-10-05  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* hello/.cvsignore: Shut up cvs.

1998-09-23  Chris Lahey  <clahey@umich.edu>

	* diff/diff.c (done): Set up diff.c to send a client_finish before
	exitting if the window is shut or cancel is hit.

1998-09-23  Chris Lahey  <clahey@umich.edu>

	* plugin_howto: Just updated this a bit.

	* client/client.c (client_init): Fixed an ordering bug where
	plugins weren't reading their contexts if in query mode.

1998-09-22  Chris Lahey  <clahey@umich.edu>

	* .*/Makefile.am: Changed so that it uses libclient.a.

	* client/.*: Added.  Adds libclient.a

	* Makefile.am: Added testselect.

1998-09-22  Chris Lahey  <clahey@umich.edu>

	* client.c, client.h: Copied from go.  Added a
	suggested_accelerator field to client_info.

	* hello/hello.c (main): Initialized client_info info to
	empty_info.  Added a client_finish call.

	* (.*)/\1.c (main): Initialized client_info info to empty_info.

	* .*/Makefile.am: Attempted to change so that it would load from
	a single client.c and client.h.  Doesn't quite work yet.

	* .*/client.h, .*/client.c: Removed.

1998-09-07  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (plugindir): Move into $(libdir) -- plugins
	are binaries, not arch-independent.
	* convert/Makefile.am (plugindir): Likewise.
	* cvsdiff/Makefile.am (plugindir): Likewise.
	* diff/Makefile.am (plugindir): Likewise.
	* email/Makefile.am (plugindir): Likewise.
	* encrypt/Makefile.am (plugindir): Likewise.
	* prm/Makefile.am (plugindir): Likewise.
	* reverse/Makefile.am (plugindir): Likewise.
	* spell/Makefile.am (plugindir): Likewise.

1998-09-03  Alex Roberts  <bse@dial.pipex.com>

	* convert/*: New plugin... Converts Dec->Hex/Oct, Hex->Dec

1998-08-27  Martin Baulig  <martin@home-of-linux.org>

	* prm/Makefile.am (prm_plugin_SOURCES): Added all files again
	that were commented out.
